# battlesnake

./: Makefile  README.md
infrastructure/: cfn-template.repo.yaml  stack-args.repo.yaml  vars.yaml
infrastructure/kube/: deployment.yaml  ingress.yaml  namespace.yaml  roleBinding.yaml  service.yaml
snakes/_template/: Dockerfile  vars.yaml
snakes/danielle-clojure/: Dockerfile  README.md  project.clj  vars.yaml
snakes/danielle-clojure/src/battlesnake/: geometry.clj  handler.clj  logic.clj
snakes/danielle-clojure/test/battlesnake/: geometry_test.clj  handler_test.clj
snakes/danielle-rust-warp/: Cargo.toml  Dockerfile
snakes/danielle-rust-warp/src/: geometry.rs  logic.rs  main.rs  state.rs
snakes/starter-snake-typescript/: Dockerfile  package-lock.json  vars.yaml
