[package]
name = "battlesnake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
pretty_env_logger = "0.5.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.97"
tokio = { version = "1.28", features = ["full"] }
warp = "0.3.5"
